# semantic-memory-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile.cbm  README.md  SECURITY.md  THIRD_PARTY.md  flake.nix  glama.json  install.ps1  install.sh  server.json
docs/: AUDIT_REPORT.md  BENCHMARK.md  EVALUATION_PLAN.md  MEMORY_MVP_DELIVERY.md  index.html  llms.txt  robots.txt  sitemap.xml
graph-ui/: index.html
pkg/pypi/: README.md  pyproject.toml
pkg/pypi/src/semantic_memory_mcp/: __init__.py  _cli.py
scripts/: benchmark-search-graph.sh  build.sh  embed_sidecar.py  gen-third-party-notices.sh  memory_recall_baseline.json  memory_recall_cases.py  memory_recall_eval.py  mock_embed_sidecar.py  security-allowlist.txt  security-install.sh  security-strings.sh  setup-windows.ps1  setup.sh  smoke-test.sh  soak-test.sh  spike_local_embed.py  spike_local_embed_scale.py  test-memory-windows.cmd  test-memory-windows.ps1  test_mcp_rapid_init.py
src/: main.c  standalone_memory_server.c
test-infrastructure/: docker-compose.yml
tests/: scale_contract.sh  smoke_guard.sh  test_artifact.c  test_cli.c  test_convergence_probe.c  test_cpp_index_hang.sh  test_edge_imports.c  test_edge_structural.c  test_edge_types_probe.c  test_grammar_probe_a.c  test_grammar_probe_b.c  test_grammar_probe_c.c  test_grammar_probe_d.c  test_grammar_probe_e.c  test_grammar_probe_f.c  test_grammar_probe_g.c  test_helpers.h  test_incremental.c  test_integration.c  test_lang_contract.c  test_lsp_resolution_probe.c  test_main.c  test_matrix_known_classes.c  test_matrix_new_constructs.c  test_mcp.c  test_ui.c  (+5 more)
(+41 files in other folders)
