[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-memory-mcp"
version = "0.10.2"
description = "Fast code intelligence engine for AI coding agents — single static binary MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mcp", "claude", "code-intelligence", "codebase", "memory", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ZR113146/semantic-memory-mcp"
Repository = "https://github.com/ZR113146/semantic-memory-mcp"
Issues = "https://github.com/ZR113146/semantic-memory-mcp/issues"

[project.scripts]
semantic-memory-mcp = "semantic_memory_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_memory_mcp"]
